# OpenEnv

./: pyproject.toml
.github/workflows/: docker-build.yml
docs/source/: concepts.md  conf.py  contributing.md  environments.md  index.md
docs/source/environments/: opencode.md
docs/source/getting_started/: README.rst  contributing-envs.md
docs/source/guides/: async-sync.md  auto-discovery.md  connecting.md  customizing-web-ui.md  deployment.md  environment-anatomy.md  first-environment.md  index.md  mcp-environment-lifecycle.md  rewards.md  rl-integration.md  simulation-vs-production.md
docs/source/reference/: auto_discovery.md  cli.md  core.md  index.md
docs/source/tutorials/: evaluation-inspect.md  index.md  mcp-environment.md  wordle-grpo.md
envs/coding_env/server/: app.py
envs/opencode_env/: .dockerignore  .gitignore  README.md  __init__.py  client.py  config.py  harness.py  models.py  opencode_runtime.py  openenv.yaml  pyproject.toml  task.py
envs/opencode_env/sandbox/: __init__.py  base.py  build_template.py  e2b.py  interception.py
envs/opencode_env/server/: Dockerfile  __init__.py  app.py  catalog.py  gradio_ui.py  opencode_environment.py
envs/reasoning_gym_env/server/: app.py
examples/: evaluation_inspect.ipynb  opencode_env_simple.py
src/openenv/core/evals/: inspect_harness.py
tests/envs/: test_opencode_env.py
